terraform/2.public_subnets_routing.tf


resource "aws_subnet" "public_subnets" {
  count                      = length(var.public_subnet_cidrs)
  vpc_id                     = aws_vpc.main.id
  cidr_block                 = element(var.public_subnet_cidrs, count.index)
  availability_zone          = data.aws_availability_zones.available.names[count.index]
  map_public_ip_on_launch    = true
  tags = {
    Name = "${var.env}-public-${count.index + 1}"
    "kubernetes.io/role/elb" = 1
  }
}

resource "aws_route_table" "public_subnets" {
    vpc_id         = aws_vpc.main.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.main.id
    }
    tags = {
        Name = "${var.env}-route-public-subnets"
    }
}

resource "aws_route_table_association" "public_routes" {
  count          = length(aws_subnet.public_subnets[*].id)
  route_table_id = aws_route_table.public_subnets[count.index 1].id
  subnet_id      = element(aws_subnet.public_subnets[*].id, count.index)
}
